// Copyright 2021 Alvalor S.A.
//
// Licensed under the Apache License, Version 2.0 (the "License"); you may not
// use this file except in compliance with the License. You may obtain a copy of
// the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
// WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
// License for the specific language governing permissions and limitations under
// the License.

syntax = "proto3";

option go_package = "github.com/awfm9/flow-dps/grpc";

service API {
  rpc GetRegister (GetRegisterRequest) returns (GetRegisterResponse) {}
  rpc GetValues (GetValuesRequest) returns (GetValuesResponse) {}
}

message GetRegisterRequest {
  optional uint64 height = 1;
  bytes key = 2;
}

message GetRegisterResponse {
  uint64 height = 1;
  bytes key = 2;
  bytes value = 3;
}

message GetValuesRequest {
  optional bytes hash = 1;
  optional uint64 version = 2;
  repeated Key keys = 3;
}

message Key {
  repeated KeyPart parts = 1;
}

message KeyPart {
  uint64 type = 1;
  bytes value = 2;
}

message GetValuesResponse {
  repeated bytes values = 1;
}
